# nft-blockchain-interactive

./: .gitattributes  .gitignore  BRUTAL_REALITY_AUDIT.md  BUILD_AND_TEST_ALL.sh  CODE_EXTRACTION_PLAN.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DOCUMENTATION_HUB.md  FILECOIN_SPECIFIC_README.md  FINAL_STATUS_SUMMARY.md  GRANT_ACTION_PLANS.txt  GRANT_EXTRACTION_SUMMARY.md  GRANT_IMPLEMENTATION_SUMMARY.md  GRANT_MODULES.json  IMPLEMENTATION_SUMMARY.md  IPFS_BLOCKCHAIN_RESEARCH.md  LIVING_STATUS_DOCUMENT.md  MANUAL_TEST_REPORT.md  MERMAID_TEST.md  MINTBASE_SPECIFIC_IMPLEMENTATION_REPORT.md  MINTBASE_SPECIFIC_README.md  MINTBASE_SPECIFIC_TECHNICAL_ARCHITECTURE.md  NEAR_CONTRACT_FIXES_SUMMARY.md  POLKADOT_SPECIFIC_README.md  POLKADOT_SPECIFIC_TECHNICAL_ARCHITECTURE.md  PROGRESS_UPDATE_MULTIMODAL_INPUT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_TASKS.csv  PROJECT_TASKS.md  README.md  REAL_IMPLEMENTATION_STATUS.md  RUST_SPECIFIC_IMPLEMENTATION_REPORT.md  RUST_SPECIFIC_TECHNICAL_ARCHITECTURE.md  SOLANA_CLIENT_FIXES_SUMMARY.md  TECHNICAL_ARCHITECTURE.md  VERIFY_COMPLETION.sh  build-bitte-grant.sh  build-filecoin-grant.sh  build-mintbase-grant.sh  build-near-grant.sh  (+13 more)
.github/: project-config.json
.github/scripts/: sync-tasks.js
.github/workflows/: sync-project-tasks.yml
.trae/: disciplinary-protocol.md
.trae/rules/: ABSOLUTE_MERMAID_PROTECTION_RULE.md
contracts/near/soulbound-nft/: Cargo.toml
contracts/near/soulbound-nft/src/: lib.rs  metadata.rs
contracts/polkadot/: Cargo.toml  lib.rs
contracts/solana/biometric-nft/programs/biometric-nft/: Cargo.toml
contracts/solana/biometric-nft/programs/biometric-nft/src/: lib.rs
docs/: BITTE_SPECIFIC_README.md  COMPREHENSIVE_ANALYSIS_AND_IMPROVEMENT_PLAN.md  DISCIPLINARY_VIOLATION_LOG.md  ENTIRE_PROJECT_REALIZATION_ROADMAP.md  FILECOIN_SPECIFIC_IMPLEMENTATION_REPORT.md  FILECOIN_SPECIFIC_README.md  FILECOIN_SPECIFIC_TECHNICAL_ARCHITECTURE.md  MINTBASE_SPECIFIC_IMPLEMENTATION_REPORT.md  MINTBASE_SPECIFIC_README.md  NEAR_CREATIVE_ENGINE_REALIZATION_PLAN.md  NEAR_SPECIFIC_IMPLEMENTATION_REPORT.md  NEAR_SPECIFIC_README.md  NEAR_SPECIFIC_TECHNICAL_ARCHITECTURE.md  POLKADOT_SPECIFIC_README.md  RUST_SPECIFIC_README.md  SOLANA_SPECIFIC_IMPLEMENTATION_REPORT.md  SOLANA_SPECIFIC_README.md  bitte-protocol-grant-application.md  comprehensive-development-plan.md  developer-guide.md  filecoin-foundation-grant.md  future-maintenance-plan.md  grant-implementation-plan.md  grant-proposal-enhancements-summary.md  grant-submission-checklist.md  grant-workflow-summary.md  mintbase-foundation-grant.md  near-foundation-grant-technical-architecture.md  near-foundation-grant.md  plan-of-action.md  project-enhancement-summary.md  repository-setup-guide.md  rust-foundation-grant.md  separate-repository-setup-plan.md  solana-foundation-grant.md  technical-roadmap.md  web3-foundation-grant.md
examples/: creative-studio-mockup.html  mock-marketplace.html  webgpu-demo.html
grant-repositories/: README.md
grant-repositories/filecoin-creative-storage/: IMPLEMENTATION_REPORT.md  README.md  TECHNICAL_ARCHITECTURE.md
grant-repositories/mintbase-creative-marketplace/: IMPLEMENTATION_REPORT.md  README.md  TECHNICAL_ARCHITECTURE.md
grant-repositories/near-creative-engine/: IMPLEMENTATION_REPORT.md  README.md  TECHNICAL_ARCHITECTURE.md
grant-repositories/polkadot-creative-identity/: IMPLEMENTATION_REPORT.md  README.md  (+1 more)
marketplace-frontend/: app.js  blockchain.js  index.html  modurust-tools.js  server.js  webgpu-test.html  wgsl-node-editor.js
reports/: IMPLEMENTATION_STATUS_REPORT.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS_SUMMARY.md
scripts/: EXTRACTION_PATH_RULES.md  deploy-near-soulbound.sh  extract-bitte-grant.sh  extract-filecoin-grant.sh  extract-mintbase-grant.sh  extract-near-grant.sh  extract-polkadot-grant.sh  extract-rust-grant.sh  extract-solana-grant.sh  fix-all-extraction-scripts.sh  fix-extraction-scripts.sh  fix-grant-documentation.sh  fix-remaining-repositories.sh  fix-violations.sh  push-all-grant-repos-final.sh  push-all-grant-repos-to-github.sh  push-all-grant-repos.sh  push-grant-repos-corrected.sh  redeploy-near-fractal-studio.bat  setup-all-grant-repos.sh  setup-enhanced-grant-repos.sh  setup-remaining-grant-repos.sh  strict-enforcer.sh
src/: AIMLBlockchainIntegration.tsx  AIMLIntegration.tsx  App.tsx  lib.rs
src/ipfs-integration/: Cargo.toml  build.sh
src/ipfs-integration/src/: ipfs_client.rs  lib.rs  modurust_storage.rs  neuroemotive_storage.rs  nuwe_storage.rs  production_storage.rs
src/marketplace/: Cargo.toml  MARKETPLACE_FIXES_SUMMARY.md  build.sh
src/marketplace/src/: dao_advanced.rs  emotional_dao_prod.rs  lib.rs  modurust_marketplace.rs  nuwe_marketplace.rs
src/near-wasm/: Cargo.toml  build.sh
src/near-wasm/src/: collaboration.rs  dynamic_nft.rs  emotional.rs  enhanced_soulbound.rs  fractal_studio.rs  interactive.rs  interactive_advanced.rs  lib.rs  mintbase.rs  patch_system.rs  soulbound.rs  wgsl_studio.rs
src/near-wasm/src/solana-client/: Cargo.toml
src/rust-client/: Cargo.toml
src/rust-client/src/: ai_blockchain_integration.rs  blockchain_integration.rs  comprehensive_integration.rs  enhanced_soulbound.rs  enhanced_webgpu_engine.rs  enhanced_webgpu_engine_new.rs  gpu_compute_engine.rs  gpu_engine_v2.rs  input_processor.rs  iron_learn_integration.rs  lancedb_integration.rs  leap_motion_integration.rs  lib.rs  mediapipe_integration.rs  music_integration.rs  real_ai_inference.rs  simple_biometric_engine.rs  webgpu_engine.rs
src/wasm-fractal/: Cargo.toml
src/wasm-fractal/src/: lib.rs
test-website/: START_TEST_SERVER.bat  START_TEST_SERVER.sh  app.js  blockchain-integration.js  blockchain.js  contract-verification.js  filecoin-storage.js  index.html  interactive-nft.js  marketplace.html  mintbase-integration.js  old-test-index.html  real-blockchain-test.html  server.js  wallet-connections.js  webgpu-comprehensive-test.html  webgpu-demo.html  webgpu-engine.js  webgpu-simple-test.html  webgpu-test-demo.html  webgpu-test.js  webgpu-verify.js
wasm-contracts/: creative_marketplace.wasm
(+45 files in other folders)
