[package]
name = "nft-blockchain-interactive"
version = "0.1.0"
edition = "2021"
description = "Interactive NFT system with Filecoin and NEAR blockchain integration"
authors = ["Kapil"]
license = "MIT"
repository = "https://github.com/compiling-org/nft-blockchain-interactive"
homepage = "https://github.com/compiling-org/nft-blockchain-interactive"
keywords = ["blockchain", "nft", "filecoin", "near", "smart-contracts"]
categories = ["cryptography", "web-programming", "api-bindings"]

[dependencies]
# Basic dependencies for blockchain library
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

[features]
default = []