[package]
name = "nft-ipfs-integration"
version = "0.1.0"
edition = "2021"
description = "IPFS integration module for CID generation and decentralized storage"
authors = ["Dr. Kapil Bambardekar <kapil.bambardekar@gmail.com>", "Grigori Korotkikh <vdmo@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/compiling-org/nft-blockchain-interactive"
homepage = "https://compiling-org.netlify.app"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
multihash = "0.18"
cid = "0.10"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }