[package]
name = "creative-marketplace"
version = "0.1.0"
edition = "2021"
description = "Test marketplace for creative NFTs with cross-chain support"
authors = ["Dr. Kapil Bambardekar <kapil.bambardekar@gmail.com>", "Grigori Korotkikh <vdmo@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/compiling-org/nft-blockchain-interactive"
homepage = "https://compiling-org.netlify.app"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.1.0"
near-contract-standards = "5.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.0"