[package]
name = "nft-near-wasm"
version = "0.1.0"
edition = "2021"
description = "NEAR WASM bindings for interactive creative NFTs and Mintbase integration"
authors = ["Dr. Kapil Bambardekar <kapil.bambardekar@gmail.com>", "Grigori Korotkikh <vdmo@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/compiling-org/nft-blockchain-interactive"
homepage = "https://compiling-org.netlify.app"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
near-sdk = "4.0"
near-contract-standards = "4.0"
borsh = "0.10"
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Performance",
  "WebGlRenderingContext",
  "WebGl2RenderingContext",
]