[package]
name = "wasm-fractal"
version = "0.1.0"
edition = "2021"
description = "Simple fractal generator for WASM deployment"

[workspace]
# Empty workspace to exclude from parent

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
js-sys = "0.3"

[profile.release]
opt-level = 3
lto = true
