[package]
name = "biometric-nft"
version = "0.1.0"
description = "Biometric NFT with emotion detection on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "biometric_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }